--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,14 @@ table{
   display: flex;
   justify-content: center;
   align-items: center;
-  border-spacing: 0px;
-}
-tbody{
-  border: 1px solid;
+  border-collapse: collapse;
 }
 td{
   height: 40px;
   width: 40px;
-  border: 1px solid;
+  border: 2px solid black;
   background-color: white;
+
 }
 h1{
   display: flex;
