--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ td{
   width: 40px;
   border: 2px solid black;
   background-color: white;
-
+}
+[id="00"] {
+  background-color: red;
 }
 h1{
   display: flex;
