--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ td{
   height: 20px;
   width: 20px;
   border: 2px solid black;
-  background-color: white;
+  background-color: grey;
 }
 [id="00"] {
   background-color: red;
