--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ table{
 td{
   height: 20px;
   width: 20px;
-  border: 2px solid black;
-  background-color: grey;
+  border: 2px solid darkgray;
+  background-color: rgb(143, 143, 143);
 }
 [id="x0y0"] {
   background-color: red;
